# copilot-proxy

./: .gitignore  AGENTS.md  Dockerfile  README.md  config-mcp.json  copilot-integration-op.md  copilot-integration-pi.md  docker-compose.yml  pyproject.toml
src/: __init__.py  __main__.py  auth.py  models.py  proxy.py  server.py
